--- a/index.htm
+++ b/index.htm
@@ -4,18 +4,18 @@
     <title>Sal e Brasa</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="user-scalable=no, initial-scale=0.7, width=device-width, viewport-fit=cover" />
-    <link rel="preload" href="script.js?v=1605719571012" as="script"/>
-<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/l/3/0_0.jpg?v=1605719571012" as="image"/>
-<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/r/3/0_0.jpg?v=1605719571012" as="image"/>
-<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/u/3/0_0.jpg?v=1605719571012" as="image"/>
-<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/d/3/0_0.jpg?v=1605719571012" as="image"/>
-<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/f/3/0_0.jpg?v=1605719571012" as="image"/>
-<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/b/3/0_0.jpg?v=1605719571012" as="image"/>
+    <link rel="preload" href="script.js?v=1605726265535" as="script"/>
+<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/l/3/0_0.jpg?v=1605726265535" as="image"/>
+<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/r/3/0_0.jpg?v=1605726265535" as="image"/>
+<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/u/3/0_0.jpg?v=1605726265535" as="image"/>
+<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/d/3/0_0.jpg?v=1605726265535" as="image"/>
+<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/f/3/0_0.jpg?v=1605726265535" as="image"/>
+<link rel="preload" href="media/panorama_CC531F50_C76B_E989_41CC_C08A845C75A4_0/b/3/0_0.jpg?v=1605726265535" as="image"/>
 <script src="scorm.js" type="text/javascript"></script>
 <script>(function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create", "UA-116087-3", "auto"); ga("send", "pageview");</script>
 <meta name="description" content="Virtual Tour"/>
-<meta name="theme-color" content="#3E3E3E"/>
-    <script src="lib/tdvplayer.js?v=1605719571012"></script>
+<meta name="theme-color" content="#222527"/>
+    <script src="lib/tdvplayer.js?v=1605726265535"></script>
     <script type="text/javascript">
         var player;
         var playersPlayingTmp = [];
@@ -53,10 +53,10 @@
             var settings = new TDV.PlayerSettings();
             
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.SCRIPT_URL, 'script.js?v=1605719571012');
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1605719571012');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1605719571012');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1605719571012');
+            settings.set(TDV.PlayerSettings.SCRIPT_URL, 'script.js?v=1605726265535');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1605726265535');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1605726265535');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1605726265535');
             window.tdvplayer = player = TDV.PlayerAPI.create(settings);
             player.bind('preloadMediaShow', beginFunc, player, true);
             player.bind('stateChange', beginFunc, player, true);
@@ -333,15 +333,15 @@ loadTour()
         }
     </script>
     <style type="text/css">
-        html, body { background-color: #3E3E3E;  width: 100%; height: 100%; margin: 0; padding: 0; padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); }
+        html, body { background-color: #222527;  width: 100%; height: 100%; margin: 0; padding: 0; padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); }
 
-        #viewer { background-color: #3E3E3E; z-index:1; position:absolute; width: 100%; height: 100%; top: 0; }
+        #viewer { background-color: #222527; z-index:1; position:absolute; width: 100%; height: 100%; top: 0; }
         #preloadContainer { z-index:2; position:relative; width:100%; height:100%; transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
     </style>
-    <link rel="stylesheet" href="fonts.css?v=1605719571012">
+    <link rel="stylesheet" href="fonts.css?v=1605726265535">
 </head>
 <body onload="onLoad()">
-    <div id="preloadContainer" style="background-color:rgba(62,62,62,1)"><div style="z-index: 4; position: absolute; background-image: url('loading/HTMLImage_DC32D71A_D5F0_3057_41DB_A43B062BA517.jpg'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 17.07%; top: 0%; width: 64.48%; height: 71.70%"></div><div style="z-index: 5; position: absolute; left: 0%; top: 69.9%; width: 100.00%; height: 10.00%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;"><SPAN STYLE="letter-spacing:0vmin;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#ffffff;font-size:3.43vmin;"><B>Carregando Tour Virtual. Por favor Aguarde...</B></SPAN></SPAN></DIV><p STYLE="margin:0; line-height:3.43vmin;"><BR STYLE="letter-spacing:0vmin;color:#000000;font-size:1.03vmin;font-family:Arial, Helvetica, sans-serif;"/></p></div></div></div>
+    <div id="preloadContainer" style="background-color:rgba(34,37,39,1)"><div style="z-index: 4; position: absolute; background-image: url('loading/HTMLImage_D1DABCBB_DCBE_7929_41E1_A594FD1BBC6A.jpeg'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 20.018450184501866%; top: 0%; width: 58.86%; height: 90.57%"></div><div style="z-index: 5; position: absolute; left: 0%; top: 84.82281303602059%; width: 100.00%; height: 10.00%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;"><SPAN STYLE="letter-spacing:0vmin;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#ffffff;font-size:3.26vmin;"><B>Carregando Tour Virtual. Por favor Aguarde...</B></SPAN></SPAN></DIV><p STYLE="margin:0; line-height:3.26vmin;"><BR STYLE="letter-spacing:0vmin;color:#000000;font-size:1.03vmin;font-family:Arial, Helvetica, sans-serif;"/></p></div></div></div>
     <div id="viewer"></div>
 </body>
 </html>
